tests/ui/suggestions/dont-suggest-try_into-in-macros.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-try_into-in-macros.rs:2:23
   |
LL |     assert_eq!(10u64, 10usize);
   |                       ^^^^^^^ expected `u64`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `u64`
   |
LL |     assert_eq!(10u64, 10u64);
   |                         ~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
